--- a/env.example
+++ b/env.example
@@ -11,5 +11,5 @@ MONGO_DBNAME=translatego_db
 # Flask Secret Key (for session security)
 SECRET_KEY=your_secret_key_here
 
-# OpenAI API Configuration
+# GEMINI API Configuration
 GEMINI_API_KEY=your_gemini_api_key_here
